@@ -98,7 +98,7 @@ PKG_CHECK_MODULES(VFS_CAPPLET, $COMMON_MODULES gnome-vfs-module-2.0 gnome-vfs-2.
 PKG_CHECK_MODULES(GNOME_DESKTOP, gnome-desktop-2.0)
 PKG_CHECK_MODULES(SOUND_CAPPLET, esound)
 PKG_CHECK_MODULES(METACITY, libmetacity-private)
-PKG_CHECK_MODULES(LIBXKLAVIER, libxklavier >= 1.00,,
+PKG_CHECK_MODULES(LIBXKLAVIER, libxklavier >= 1.02,,
     AC_MSG_ERROR([Upcoming releases of gnome-control-center will depend on libxklavier.
 The latest release is available from http://prdownloads.sourceforge.net/gswitchit], 1))
 
