@@ -1,3 +1,9 @@
+2004-04-15  Jody Goldberg <jody@gnome.org>
+
+	http://bugzilla.gnome.org/show_bug.cgi?id=139605
+	* eggcellrendererkeys.c (grab_key_callback) : mouse buttons should not
+	  be valid modifiers.
+
 2004-04-06  Jody Goldberg <jody@gnome.org>
 
 	* gnome-keybinding-properties.c (cb_check_for_uniqueness) : Really fix
