@@ -1,10 +1,15 @@
+2004-04-15  Jody Goldberg <jody@gnome.org>
+
+	* configure.in : Force libxklavier 1.0.2 so that we can work with
+	  x.org and xfree86
+
 2004-04-14  Iñaki Larrañaga  <dooteo@euskalgnu.org>
 
 	* configure.in: Added "eu" (Basque) to ALL_LINGUAS.
 
 2004-04-09  Guntupalli Karunakar  <karunakar@freedomink.org>
 
-        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.
+	* configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.
 
 2004-04-08  Jody Goldberg <jody@gnome.org>
 
